[package]
name = "synthtext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
directories = "4.0.1"
once_cell = "1.9.0"
textsynth = { git = "https://github.com/ALinuxPerson/textsynth.git" }
