[package]
name = "synthtext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.10", features = ["derive"] }
directories = "4.0.1"
once_cell = "1.9.0"
serde = { version = "1.0.133", features = ["derive"] }
textsynth = { git = "https://github.com/ALinuxPerson/textsynth.git", features = ["serde"] }
