[package]
name = "synthtext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alp = { git = "https://github.com/ALinuxPerson/alp.git", features = ["log"] }
anyhow = "1.0.52"
clap = { version = "3.0.10", features = ["derive"] }
directories = "4.0.1"
futures = "0.3.19"
once_cell = "1.9.0"
owo-colors = "3.2.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
tap = "1.0.1"
textsynth = { git = "https://github.com/ALinuxPerson/textsynth.git", features = ["serde"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }

[features]
